# phat-offchain-rollup

./: .gitignore  .gitmodules  DevNotes.md  EvmRollup.md  InkRollup.md  README.md  TechnicalDetails.md  technical-details.md
evm/: README.md  hardhat.config.ts  package.json
evm/contracts/: Interfaces.sol  MetaTransaction.sol  PhatQueuedAnchor.sol  PhatRollupAnchor.sol  PhatRollupReceiver.sol  TestOracle.sol  TestReceiver.sol
evm/scripts/: check-anchor.ts  deploy-test.ts  testnet-push-request.ts
evm/test/: PhatQueuedAnchor.ts  PhatRollupAnchor.ts  SampleOracle.ts
ink/: Cargo.toml  rust-toolchain.toml
ink/artifacts/test_oracle/: test_oracle.contract  test_oracle.json  test_oracle.wasm
ink/contracts/test_oracle/: Cargo.toml  README.md  lib.rs
ink/crates/phat_rollup_anchor_ink/: Cargo.toml  README.md
ink/crates/phat_rollup_anchor_ink/src/: lib.rs
ink/crates/phat_rollup_anchor_ink/src/impls/: kv_store.rs  message_queue.rs  meta_transaction.rs  mod.rs  rollup_anchor.rs
ink/crates/phat_rollup_anchor_ink/src/tests/: mod.rs
ink/crates/phat_rollup_anchor_ink/src/traits/: js_rollup_anchor.rs  kv_store.rs  message_queue.rs  meta_transaction.rs  mod.rs  rollup_anchor.rs
ink/crates/phat_rollup_anchor_ink/tests/: kv_store.rs  message_queue.rs  meta_transaction.rs  rollup_anchor.rs
ink/crates/phat_rollup_anchor_ink/tests/contract/: mod.rs
kv-session/: Cargo.toml
kv-session/src/: error.rs  lib.rs  queue.rs  rollup.rs  session.rs  trackers.rs  traits.rs
phat/: .env_sample  .gitignore  Cargo.toml  Development.md  README.md  Sub0-Workshop.md  devphase.config.ts  package.json  rust-toolchain.toml  tsconfig.json
phat/.devphase/: releases.json
phat/artifacts/evm_price_feed/: evm_price_feed.contract  evm_price_feed.json  evm_price_feed.wasm  metadata.json
phat/artifacts/evm_transactor/: evm_transactor.contract  evm_transactor.wasm  metadata.json
phat/artifacts/ink_price_feed/: ink_price_feed.contract  ink_price_feed.json  ink_price_feed.wasm
phat/artifacts/local_scheduler/: local_scheduler.contract  local_scheduler.json  local_scheduler.wasm  metadata.json
phat/artifacts/momoka_publication/: momoka_publication.contract  momoka_publication.json  momoka_publication.wasm
phat/artifacts/sample_oracle/: metadata.json  sample_oracle.contract  sample_oracle.wasm
phat/artifacts/sub0_factory/: metadata.json  sub0_factory.contract  sub0_factory.json  sub0_factory.wasm
phat/artifacts/sub_price_feed/: metadata.json  sub_price_feed.contract  sub_price_feed.json  sub_price_feed.wasm
phat/contracts/evm_price_feed/: .env_sample  Cargo.toml  README.md  lib.rs
phat/contracts/evm_transactor/: .env_sample  Cargo.toml  lib.rs
phat/contracts/http_test/: .env_sample  Cargo.toml  lib.rs
phat/contracts/ink_price_feed/: .env  .env_localhost  .env_shibuya  Cargo.toml  README.md  lib.rs  rust-toolchain.toml
phat/contracts/local_scheduler/: Cargo.toml  lib.rs
phat/contracts/momoka_publication/: .env_sample  Cargo.toml  lib.rs
phat/contracts/momoka_publication/res/: anchor.abi.json
phat/contracts/sample_oracle/: .env_sample  Cargo.toml  lib.rs
phat/contracts/sub0_factory/: Cargo.toml  lib.rs
phat/contracts/sub_price_feed/: Cargo.toml  lib.rs
phat/crates/kv-session/: Cargo.toml
phat/crates/kv-session/src/: queue.rs
phat/crates/rollup/: Cargo.toml
phat/crates/rollup/res/: anchor.abi.json
phat/crates/rollup/src/: lib.rs
phat/crates/rollup/src/clients/: evm.rs  ink.rs  mod.rs  substrate.rs
phat/crates/subrpc/: Cargo.toml
phat/crates/subrpc/src/: lib.rs  objects.rs  ss58.rs  storage.rs
phat/evm_transactor/: Cargo.toml  lib.rs
phat/evm_transactor/res/: anchor.abi.json
phat/rollup/: Cargo.toml
phat/rollup/src/: lib.rs  lock.rs  platforms.rs
phat/rollup/src/clients/: evm.rs  mod.rs
phat/sample_oracle/: .env_sample  Cargo.toml  lib.rs
phat/tests/: e2e.test.ts  evm.test.ts  substrate.test.ts
phat/tests/substrate/: substrate.test.ts
phat/typings/: EvmPriceFeed.ts  EvmTransactor.ts  InkPriceFeed.ts  LocalScheduler.ts  MomokaPublication.ts  SampleOracle.ts  Sample_oracle.ts  Sub0Factory.ts  SubPriceFeed.ts
scripts/: build-abi.sh
