[workspace]
members = [
    "crates/rollup",
    "contracts/local_scheduler",
    "contracts/sub0_factory",
    "contracts/sub_price_feed",
    "contracts/evm_price_feed",
]

# Sneak peek of the new test engine!
[patch.crates-io]
serde = { git = "https://github.com/kvinwang/serde.git", branch = "pink" }