[package]
name = "evm_transactor"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

# Necessary due to the cargo bug bug: https://github.com/rust-lang/cargo/issues/10118
[profile.release]
overflow-checks = false

[dependencies]
ink_primitives = { version = "3", default-features = false }
ink_metadata = { version = "3", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3", default-features = false }
ink_storage = { version = "3", default-features = false }
ink_lang = { version = "3", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
primitive-types = { version = "0.11", default-features = false, features = ["codec", "scale-info"] }

pink-extension = { version = "0.1", default-features = false }
pink-web3 = { version = "0.19", default-features = false, features = ["pink", "signing"] }
ethabi = { version = "17.2.0", package = "pink-ethabi", default-features = false, features = [
    "serde",
    "rlp",
] }

phat_offchain_rollup = { path = "../rollup", default-features = false }

[dev-dependencies]
dotenvy = "0.15"
hex = "0.4"
pink-extension-runtime = "0.1"

sample_oracle = { path = "../sample_oracle", features = ["ink-as-dependency"] }

[lib]
name = "evm_transactor"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
    "phat_offchain_rollup/std",
    "pink-extension/std",
    "pink-web3/std",
]
ink-as-dependency = []
