[package]
name = "ink_price_feed"
version = "0.0.1"
authors = ["GuiGou"]
edition = "2021"

# Necessary due to the cargo bug bug: https://github.com/rust-lang/cargo/issues/10118
[profile.release]
overflow-checks = false

[dependencies]
ink = { version = "4.3.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.9.0", default-features = false, features = ["derive"], optional = true }
serde = { version = "1.0.188", default-features = false, features = ["derive", "alloc"]}
fixed = { version = "1", default-features = false, features = ["serde"] }

pink-extension = { version = "0.4.4", default-features = false }
pink-json = { git = "https://github.com/Phala-Network/pink-json.git", branch = "pink", default-features = false, features = ["de-number-as-str"] }
pink-web3 = { version = "0.20.2", default-features = false, features = ["pink", "signing"] }

phat_offchain_rollup = { path = "../../crates/rollup", default-features = false, features = ["ink"] }

subrpc = { package = "pink-subrpc", version = "0.4.3", default-features = false }

hex = { version = "0.4", default-features = false }

[dev-dependencies]
dotenvy = "0.15"
env_logger = "0.10.0"
pink-extension-runtime = { version = "0.4.4", default-features = false }
hex-literal = "0.4.1"

[build-dependencies]
half = { version = "=2.2.1", default-features = false }

[lib]
path = "lib.rs"

[features]
default = ["std",  "logging"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "phat_offchain_rollup/std",
    "pink-extension/std",
    "subrpc/std",
    "pink-json/std",
    "pink-web3/std",
]
ink-as-dependency = []
logging = ["phat_offchain_rollup/logging"]
