[package]
name = "local_scheduler"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink_primitives = { version = "3", default-features = false }
ink_metadata = { version = "3", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3", default-features = false }
ink_storage = { version = "3", default-features = false }
ink_lang = { version = "3", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
# primitive-types = { version = "0.11", default-features = false, features = ["codec", "scale-info"] }

pink-extension = { version = "0.1", default-features = false }
saffron = { version = "0.1", default-features = false }
chrono = { version = "0.4", default-features = false }

[dev-dependencies]
env_logger = "0.9"
hex-literal = "0.3"
pink-extension-runtime = "0.1"

sample_oracle = { path = "../sample_oracle", features = ["ink-as-dependency"] }

[lib]
name = "local_scheduler"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
    "pink-extension/std",
    "saffron/std",
]
ink-as-dependency = []


# Leave for `cargo contract` build.
[patch.crates-io]
serde = { git = "https://github.com/kvinwang/serde.git", branch = "pink" }

# Necessary due to the cargo bug bug: https://github.com/rust-lang/cargo/issues/10118
[profile.release]
overflow-checks = false