[package]
name = "local_scheduler"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink_env = { version = "4.0.1", default-features = false }
ink = { version = "4.0.1", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

pink-extension = { version = "0.4.1", default-features = false }
saffron = { version = "0.1", default-features = false }
chrono = { version = "0.4", default-features = false }

[dev-dependencies]
env_logger = "0.10.0"
hex-literal = "0.3"
pink-extension-runtime = "0.4.0"

# sample_oracle = { path = "../sample_oracle", features = ["ink-as-dependency"] }

[lib]
name = "local_scheduler"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink_env/std",
    "ink/std",
    "scale/std",
    "scale-info/std",
    "pink-extension/std",
    "saffron/std",
]
ink-as-dependency = []


# Leave for `cargo contract` build.
[patch.crates-io]
serde = { git = "https://github.com/kvinwang/serde.git", branch = "pink" }

# Necessary due to the cargo bug bug: https://github.com/rust-lang/cargo/issues/10118
[profile.release]
overflow-checks = false