[package]
name = "sub0_factory"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink_env = { version = "4.2.1", default-features = false }
ink = { version = "4.2.1", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

pink-extension = { version = "0.5.0", default-features = false }
sub_price_feed = { path = "../sub_price_feed", default-features = false, features = ["ink-as-dependency"] }

[dev-dependencies]
env_logger = "0.10.0"
hex-literal = "0.3"
pink-extension-runtime = "0.5.0"

[lib]
name = "sub0_factory"
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink_env/std",
    "ink/std",
    "scale/std",
    "scale-info/std",
    "pink-extension/std",
    "sub_price_feed/std",
]
ink-as-dependency = []


# Leave for `cargo contract` build.
[patch.crates-io]
serde = { git = "https://github.com/kvinwang/serde.git", branch = "patched-v1.0.188" }

# Necessary due to the cargo bug bug: https://github.com/rust-lang/cargo/issues/10118
[profile.release]
overflow-checks = false
