[package]
name = "phat_offchain_rollup"
version = "0.1.0"
edition = "2021"

[lib]
name = "phat_offchain_rollup"
path = "src/lib.rs"

[dependencies]
ink_primitives = { version = "3", default-features = false }
ink_metadata = { version = "3", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3", default-features = false }
ink_storage = { version = "3", default-features = false }
ink_lang = { version = "3", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
primitive-types = { version = "0.11", default-features = false, features = ["codec", "scale-info"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }

pink-extension = { version = "0.2", default-features = false, optional = true }
pink-web3 = { version = "0.19", default-features = false, features = ["pink", "signing"] }
ethabi = { version = "17.2.0", package = "pink-ethabi", default-features = false, features = [
    "serde",
    "rlp",
] }

[features]
default = ["std", "logging"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "ink_lang/std",
    "scale/std",
    "scale-info/std",
	"primitive-types/std",
    "pink-web3/std",
]
logging = [
    "pink-extension",
]