[package]
name = "phat_offchain_rollup"
version = "0.1.0"
edition = "2021"

[lib]
name = "phat_offchain_rollup"
path = "src/lib.rs"

[dependencies]
ink = { version = "4.0.1", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }
primitive-types = { version = "0.12.1", default-features = false, features = ["codec", "scale-info"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }

pink-extension = { version = "0.4.1", default-features = false, optional = true }
kv-session = { package = "pink-kv-session", version = "0.2" }

# for EVM rollup
pink-web3 = { version = "0.20.1", default-features = false, features = ["pink", "signing"], optional = true }
ethabi = { version = "18.0.0", default-features = false, features = [
    "serde",
    "rlp",
], optional = true }

# for Substrate rollup
subrpc = { package = "pink-subrpc", version = "0.4.2", default-features = false, optional = true }

[dev-dependencies]
hex-literal = "0.4.1"
pink-extension-runtime = { version = "0.4.0", default-features = false }

[features]
default = ["std", "logging"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "primitive-types/std",
    "pink-web3/std",
    "ethabi/std",
    "subrpc/std",
]
logging = [
    "pink-extension",
]
substrate = [
    "subrpc",
    "pink-extension",
]
evm = [
    "pink-web3",
    "ethabi",
    "pink-extension",
]